# WashinOC

./: Cargo.toml  README.md
src/: bsp.rs  config.rs  lib.rs
src/app/: controller.rs  event.rs  mod.rs  state.rs  timing.rs
src/domain/: mod.rs  mode.rs  phase.rs  time.rs
src/drivers/: display.rs  mod.rs  motor.rs  touch.rs
